--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1234,6 +1234,31 @@ Those fields that are not to be changed can be left out.
 	url	 = {https://link.springer.com/chapter/10.1007/978-3-030-34356-9_18},
 }
 
+@misc{hiperjobviz2019,
+	author = {Ngan Nguyen and Yong Chen and Jon Hass and Tommy Dang},
+	title = {{HiperJobViz: Visualizing Resource Allocations in  HPCC via Multivariate Health-Status Data}},
+	location = {Denver, SC19},
+	publisher = {Texas Tech University},
+	year= {2019},
+	url = {https://texastechuniversity-my.sharepoint.com/:p:/g/personal/tommy_dang_ttu_edu/EewObo2LMz5Gt1tLBTg1wFYBoMGrvVZ3wLZIRqVGY_50EA?rtime=xSv7VWIt2Eg}
+}
+
+@article{nagel1996vampir,
+  title={VAMPIR: Visualization and analysis of MPI resources},
+  author={Nagel, Wolfgang E and Arnold, Alfred and Weber, Michael and Hoppe, Hans-Christian and Solchenbach, Karl},
+  year={1996},
+  publisher={Citeseer}
+}
+
+@inproceedings{weber2016structural,
+  title={Structural clustering: a new approach to support performance analysis at scale},
+  author={Weber, Matthias and Brendel, Ronny and Hilbrich, Tobias and Mohror, Kathryn and Schulz, Martin and Brunst, Holger},
+  booktitle={2016 IEEE International Parallel and Distributed Processing Symposium (IPDPS)},
+  pages={484--493},
+  year={2016},
+  organization={IEEE}
+}
+
 @inproceedings{itb2020,
 author = {Betke, Eugen AND Kunkel, Julian},
 title = {{The Importance of Temporal Behavior when Classifying Job IO Patterns Using Machine Learning Techniques}},
