--- a/main.tex
+++ b/main.tex
@@ -546,7 +546,7 @@ Level & Interval      & Interval Size \\
 15    & [3.625,3.875) & 0.25          \\ 
 16    & [3.875,4]     & 0.125         \\ 
 \end{tabular}
-\caption{Non-unifomr quantization intervals}
+\caption{Non-uniform quantization intervals}
 \label{tab:quant_intervals}
 \end{table}
 
